# node-ml

./: .gitignore  .gitmodules  .npmignore  CMakeLists.txt  converter.py  index.js  ml.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
examples/: sd.ts
ml/: .gitignore  CMakeLists.txt
ml/addon/: Bark.cpp  Bark.h  Encodec.cpp  Encodec.h  Llama.cpp  Llama.h  StableDiffusion.cpp  StableDiffusion.h  Upscaler.cpp  Upscaler.h  Whisper.cpp  Whisper.h  addon.cpp
ml/addon/ggml/: Backend.cpp  Backend.h  BackendDevice.cpp  BackendDevice.h  BackendReg.cpp  BackendReg.h  Buffer.cpp  Buffer.h  BufferType.cpp  BufferType.h  CGraph.cpp  CGraph.h  Context.cpp  Context.h  Device.cpp  Device.h  GGML.cpp  GGML.h  GGMLBackend.cpp  GGMLBackendDevice.cpp  GGMLBackendDevice.h  GGMLSession.cpp  GGUF.cpp  GGUF.h  GraphPlan.cpp  GraphPlan.h  InitParams.cpp  InitParams.h  Plan.cpp  Plan.h  Scheduler.cpp  Scheduler.h  Tensor.cpp  Tensor.h
ml/bark/: CMakeLists.txt
ml/bark/patches/: CMakelists.patch  bark.cpp.patch  bark.h.patch  disable_encodec_submodule.patch  fix-bark-cpp.patch
ml/encodec/: CMakeLists.txt
ml/encodec/patches/: CMakeLists.patch  disable_ggml_submodule.patch  encodec.cpp.patch
ml/stable-diffusion/: CMakeLists.txt
ml/stable-diffusion/patches/: CMakeLists.patch  common.hpp.patch  esrgan.hpp.patch  ggml_extend.hpp.patch  tae.hpp.patch
ml/whisper/: CMakeLists.txt
src/: types.ts
src/cli/: cli.ts
src/cli/commands/: BuildCommand.ts  ConfigureCommand.ts  DownloadCommand.ts
tests/: bark.js  index.js  llama.js  sd.js  upscaler.js  whisper.js
